Được tạo bằng Colab

--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -36,20 +36,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
-        "id": "jgCgYIFNfw97",
-        "outputId": "845f7f38-536c-4785-9399-897ade3f675f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jgCgYIFNfw97",
+        "outputId": "4514557f-5327-4f88-85c4-dd4f1862f85a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-1-ef889392170e>:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "<ipython-input-2-ef889392170e>:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
             "  set_matplotlib_formats('svg', 'pdf') # For export\n"
           ]
         }
@@ -100,13 +100,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
-        "id": "jaO2axVLfw99",
-        "outputId": "8fefcb82-4fd2-4cf2-921e-d66c0cc308ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jaO2axVLfw99",
+        "outputId": "587ec9f0-b49e-4502-800f-a564a572d63d"
       },
       "outputs": [
         {
@@ -145,24 +145,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
-        "id": "myQtQRArfw9-",
-        "outputId": "5f715963-010b-40bf-934a-f8b9311d0eee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "myQtQRArfw9-",
+        "outputId": "71b0ea6f-876e-4a5a-e19e-7de0429723b3"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7886dfe54ab0>"
+              "<torch._C.Generator at 0x7e424adf74f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ],
       "source": [
@@ -202,24 +202,24 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "-KOTlmUCfw9-",
-        "outputId": "ffa90590-c03b-44f4-9a54-9faa58da781f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-KOTlmUCfw9-",
+        "outputId": "d7f04971-359f-4159-b2e2-70feb6db48ce"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[2.3370e-33, 0.0000e+00, 0.0000e+00, 1.4013e-45],\n",
-            "         [8.9683e-44, 0.0000e+00, 1.5695e-43, 0.0000e+00],\n",
-            "         [2.6382e-33, 0.0000e+00, 2.6450e-33, 0.0000e+00]],\n",
+            "tensor([[[1.0903e+27, 6.7722e+22, 7.1768e+22, 1.5788e-19],\n",
+            "         [5.4275e-14, 1.6109e-19, 7.0374e+22, 1.3556e-19],\n",
+            "         [3.2814e-18, 6.2316e+22, 4.6114e+24, 7.1758e+22]],\n",
             "\n",
-            "        [[1.5737e-42, 0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
-            "         [8.5059e-43, 4.3236e-41, 2.6450e-33, 0.0000e+00],\n",
-            "         [1.5751e-42, 0.0000e+00, 0.0000e+00, 0.0000e+00]]])\n"
+            "        [[1.8936e+23, 7.5769e+23, 4.5444e+30, 1.8063e+28],\n",
+            "         [2.7915e+20, 4.6305e+27, 4.7473e+27, 1.9205e+31],\n",
+            "         [4.7418e+30, 6.8608e+22, 2.2435e-42, 0.0000e+00]]])\n"
           ]
         }
       ],
@@ -255,13 +255,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
-        "id": "EW8_mDPJfw9_",
-        "outputId": "3047466c-8ab3-478c-d501-ba30eb091d56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EW8_mDPJfw9_",
+        "outputId": "9c9f4a9e-f943-4322-a84c-9a89c7cc036b"
       },
       "outputs": [
         {
@@ -281,26 +281,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
-        "id": "0tgo2LjAfw9_",
-        "outputId": "5ed3e5ca-9e5d-4af6-8358-83f8d231378b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0tgo2LjAfw9_",
+        "outputId": "f72eddf4-9b86-46ad-b9ca-5381adbab04f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.9819, 0.6880, 0.8068, 0.7691],\n",
-            "         [0.5030, 0.8170, 0.3162, 0.4320],\n",
-            "         [0.5426, 0.8573, 0.5477, 0.8645]],\n",
+            "tensor([[[0.8823, 0.9150, 0.3829, 0.9593],\n",
+            "         [0.3904, 0.6009, 0.2566, 0.7936],\n",
+            "         [0.9408, 0.1332, 0.9346, 0.5936]],\n",
             "\n",
-            "        [[0.7445, 0.1569, 0.3770, 0.1620],\n",
-            "         [0.2956, 0.1799, 0.9073, 0.6954],\n",
-            "         [0.2808, 0.2054, 0.5142, 0.6001]]])\n"
+            "        [[0.8694, 0.5677, 0.7411, 0.4294],\n",
+            "         [0.8854, 0.5739, 0.2666, 0.6274],\n",
+            "         [0.2696, 0.4414, 0.2969, 0.8317]]])\n"
           ]
         }
       ],
@@ -320,14 +320,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Có thể xem size - shape qua các phương thức .shape và .size tương tự Machine Learning"
+      ],
+      "metadata": {
+        "id": "hf1XvLSG3o98"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "KJmorrtrfw9_",
-        "outputId": "e5b672f1-1609-4eb1-9d89-9db06679e731",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KJmorrtrfw9_",
+        "outputId": "9411d249-5b2b-41ef-86c8-2b20dd63d8c4"
       },
       "outputs": [
         {
@@ -363,16 +372,28 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Có thể chuyển đổi từ Tensor sang Numpy và ngược lại"
+      ],
       "metadata": {
+        "id": "E_yFg7kg3_hD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "1MkG4Uw-fw-A",
-        "outputId": "f8e09030-64c2-458c-89cc-9bbfc578bedd"
+        "outputId": "6d663c62-b2dc-4e94-9a27-372d8e6f86fb"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Numpy array: [[1 2]\n",
             " [3 4]]\n",
@@ -400,15 +421,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "8bYKXLwMfw-A",
-        "outputId": "23d14780-5bde-48d2-dff5-f2754455aaec"
+        "outputId": "a15fd178-a27b-4da3-89fc-399f835b8ace"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "PyTorch tensor: tensor([0, 1, 2, 3])\n",
             "Numpy array: [0 1 2 3]\n"
@@ -446,16 +470,28 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Các phép tính phổ biến ở PyTorch đều tương tự như Numpy"
+      ],
       "metadata": {
+        "id": "PBAQoDFW4M8W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "IOTqNwtdfw-B",
-        "outputId": "0a9beb92-4979-405a-986e-e4398f73322f"
+        "outputId": "88629a90-fd7d-4979-8bd4-376788075ce7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "X1 tensor([[0.1053, 0.2695, 0.3588],\n",
             "        [0.1994, 0.5472, 0.0062]])\n",
@@ -487,15 +523,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "6lMOXr6Pfw-B",
-        "outputId": "30bbc1cf-b22e-4cb5-bb50-256cf3862971"
+        "outputId": "02d38568-806b-4302-89f7-2e92298415ba"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "X1 (before) tensor([[0.5779, 0.9040, 0.5547],\n",
             "        [0.3423, 0.6343, 0.3644]])\n",
@@ -531,16 +570,28 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Phép tính View là phép tính để chuyển đổi hình dạng (Shape) của tensor\n"
+      ],
       "metadata": {
+        "id": "1wMMMpq2DG3V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "t_dF2tLhfw-B",
-        "outputId": "ef666bbc-5821-4813-dd95-e828ec605c90"
+        "outputId": "e431a1a3-0cd9-4c8f-d83a-25645ce5b9fe"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "X tensor([0, 1, 2, 3, 4, 5])\n"
           ]
@@ -553,15 +604,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "s6ozNZJJfw-B",
-        "outputId": "c179a61a-d9cb-4ddb-c7e4-86570cfccc99"
+        "outputId": "c2a0a790-7ce5-4846-9294-de0a6733d3e4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "X tensor([[0, 1, 2],\n",
             "        [3, 4, 5]])\n"
@@ -575,15 +629,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "_pIJsu36fw-B",
-        "outputId": "7601b848-5930-4be5-d5d4-6007592b7e43"
+        "outputId": "2fdf29a2-9ff7-450c-9b19-0f1add85e330"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "X tensor([[0, 3],\n",
             "        [1, 4],\n",
@@ -611,6 +668,31 @@
         "\n",
         "Usually, we use `torch.matmul` or `torch.bmm`. We can try a matrix multiplication with `torch.matmul` below."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Phép nhân là phép tính quan trọng trong mạng Neutron\n",
+        "\n",
+        "*   torch.matmul(tensor1, tensor2, out=None):\n",
+        "<br>- out: Tensor tùy chọn để lưu kết quả. Nếu không được chỉ định, kết quả sẽ được trả về trong một tensor mới.</p>\n",
+        "Lưu ý\n",
+        "<br>- torch.matmul chỉ thực hiện phép nhân ma trận khi cả hai tensors đều có ít nhất hai chiều.\n",
+        "<br>- Đối với các tensors có số chiều khác nhau, torch.matmul sẽ áp dụng quy tắc broadcasting để thực hiện phép nhân.\n",
+        "\n",
+        "*   torch.mm(tensor1, tensor2, out=None):</p>\n",
+        "Lưu ý:\n",
+        "<br>- torch.mm chỉ hỗ trợ nhân ma trận 2 chiều\n",
+        "<br>- torch.mm không hỗ trợ broadcasting\n",
+        "\n",
+        "<br>Các quy tắc nhân ma trận:\n",
+        "<br>- Số cột của tensor1 phải bằng số hàng của tensor2.\n",
+        "<br>- Kết quả của phép nhân ma trận sẽ có số hàng bằng số hàng của tensor1 và số cột bằng số cột của tensor2.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fEnArxA3EjCz"
+      }
     },
     {
       "cell_type": "code",
@@ -2824,13 +2906,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8Ahcn1Eqfw-Q",
-        "outputId": "ab40b7d9-449d-4db8-fbc3-0f85a7f9b70c",
         "colab": {
           "referenced_widgets": [
             "eb0f1646f5f4459c86c22f0845150144"
           ]
-        }
+        },
+        "id": "8Ahcn1Eqfw-Q",
+        "outputId": "ab40b7d9-449d-4db8-fbc3-0f85a7f9b70c"
       },
       "outputs": [
         {
@@ -4166,13 +4248,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BCRaKfLsfw-T",
-        "outputId": "eec3476b-a24f-458e-b465-02c7c56bcbc0",
         "colab": {
           "referenced_widgets": [
             "833e50b766e34e2ba3e97ca7b91b6703"
           ]
-        }
+        },
+        "id": "BCRaKfLsfw-T",
+        "outputId": "eec3476b-a24f-458e-b465-02c7c56bcbc0"
       },
       "outputs": [
         {
