Được tạo bằng Colab

--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -685,9 +685,17 @@
         "<br>- torch.mm chỉ hỗ trợ nhân ma trận 2 chiều\n",
         "<br>- torch.mm không hỗ trợ broadcasting\n",
         "\n",
+        "*   torch.bmm(tensor1, tensor2, out=None)</p>\n",
+        "Lưu ý:\n",
+        "<br>- torch.bmm được tối ưu hóa cho nhân ma trận theo lô, giúp tăng tốc độ tính toán khi xử lý dữ liệu theo lô.\n",
+        "<br>- chỉ thực hiện phép nhân ma trận khi cả hai tensors đều có 3 chiều.\n",
+        "*   torch.einsum:\n",
+        "\n",
         "<br>Các quy tắc nhân ma trận:\n",
         "<br>- Số cột của tensor1 phải bằng số hàng của tensor2.\n",
         "<br>- Kết quả của phép nhân ma trận sẽ có số hàng bằng số hàng của tensor1 và số cột bằng số cột của tensor2.\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
